[gd_scene load_steps=13 format=3 uid="uid://ccj70tabaprug"]

[ext_resource type="Theme" uid="uid://bhjf3u3dj1bgt" path="res://main/ui/main_theme.tres" id="1_dwebr"]
[ext_resource type="Script" path="res://main/ui/initial_menu/initial_menu.gd" id="2_81ub6"]
[ext_resource type="Script" path="res://main/ui/initial_menu/join_menu/join_menu.gd" id="3_sosfw"]
[ext_resource type="Script" path="res://main/ui/initial_menu/lobby/lobby_menu.gd" id="4_da7kp"]
[ext_resource type="PackedScene" path="res://main/ui/initial_menu/lobby/UserPanel.tscn" id="5_bjjs7"]
[ext_resource type="Script" path="res://main/ui/initial_menu/character_menu/character_menu.gd" id="6_tqxow"]
[ext_resource type="Texture2D" uid="uid://cyqcg4k2g68ht" path="res://icon.svg" id="7_n0eyn"]
[ext_resource type="Script" path="res://main/ui/initial_menu/main_menu/main_menu.gd" id="8_kofmm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0qmb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_028xl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcr4s"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkgd4"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.172549, 0.172549, 0.172549, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="InitialMenu" type="Control" node_paths=PackedStringArray("character_menu", "main_menu", "join_menu", "mini_lobby_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dwebr")
script = ExtResource("2_81ub6")
character_menu = NodePath("CharacterMenu")
main_menu = NodePath("MainMenu")
join_menu = NodePath("JoinMenu")
mini_lobby_menu = NodePath("LobbyMenu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="JoinMenu" type="VBoxContainer" parent="." node_paths=PackedStringArray("go_button", "quit_button", "code_line", "error_label")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -98.5
offset_right = 200.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_sosfw")
go_button = NodePath("GoButton")
quit_button = NodePath("QuitButton")
code_line = NodePath("GameCode")
error_label = NodePath("MarginContainer/ErrorLabel")
empty_code_error = "Please enter a code below. This should be the three-word password given by a friend when they create a lobby, such as EAT-WOW-YAY"
no_matching_code_error = "A lobby with that game code could not be found."

[node name="MarginContainer" type="MarginContainer" parent="JoinMenu"]
theme_override_constants/margin_top = 64

[node name="ErrorLabel" type="Label" parent="JoinMenu/MarginContainer"]
custom_minimum_size = Vector2(0, 130)
theme_override_colors/font_color = Color(0.960784, 0.74902, 0.74902, 1)
theme_override_colors/font_outline_color = Color(0.611765, 0.286275, 0.341176, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
autowrap_mode = 2

[node name="GameCode" type="LineEdit" parent="JoinMenu"]
custom_minimum_size = Vector2(400, 64)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(0.72549, 0.733333, 0.741176, 1)
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter game code..."

[node name="GoButton" type="Button" parent="JoinMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Go"

[node name="QuitButton" type="Button" parent="JoinMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="LobbyMenu" type="VBoxContainer" parent="." node_paths=PackedStringArray("code_label", "start_button", "leave_button", "user_container")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -98.5
offset_right = 200.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8
script = ExtResource("4_da7kp")
code_label = NodePath("GameCode")
start_button = NodePath("StartButton")
leave_button = NodePath("LeaveButton")
user_container = NodePath("UserContainer")

[node name="MarginContainer" type="MarginContainer" parent="LobbyMenu"]
theme_override_constants/margin_top = 64

[node name="Label" type="Label" parent="LobbyMenu/MarginContainer"]
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.266667, 0.290196, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
text = "Share this game code to let others join:"

[node name="GameCode" type="LineEdit" parent="LobbyMenu"]
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(0.72549, 0.733333, 0.741176, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_h0qmb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_028xl")
theme_override_styles/read_only = SubResource("StyleBoxFlat_kcr4s")
text = "EAT-WOW-YAY"
alignment = 1
editable = false

[node name="CodeLabel" type="Label" parent="LobbyMenu"]
visible = false
theme_override_font_sizes/font_size = 32
text = "EAT-WOW-YAY"
horizontal_alignment = 1

[node name="UserContainer" type="PanelContainer" parent="LobbyMenu"]
theme_override_styles/panel = SubResource("StyleBoxFlat_rkgd4")

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyMenu/UserContainer"]

[node name="A" parent="LobbyMenu/UserContainer/VBoxContainer" instance=ExtResource("5_bjjs7")]

[node name="B" parent="LobbyMenu/UserContainer/VBoxContainer" instance=ExtResource("5_bjjs7")]

[node name="C" parent="LobbyMenu/UserContainer/VBoxContainer" instance=ExtResource("5_bjjs7")]

[node name="D" parent="LobbyMenu/UserContainer/VBoxContainer" instance=ExtResource("5_bjjs7")]

[node name="StartButton" type="Button" parent="LobbyMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="LeaveButton" type="Button" parent="LobbyMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Leave Game"

[node name="CharacterMenu" type="VBoxContainer" parent="." node_paths=PackedStringArray("go_button", "left_button", "right_button", "player_icon", "username")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.5
offset_top = -130.5
offset_right = 201.5
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
script = ExtResource("6_tqxow")
go_button = NodePath("GoButton")
left_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Left")
right_button = NodePath("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Right")
player_icon = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Icon")
username = NodePath("MarginContainer/HBoxContainer/Username")

[node name="MarginContainer" type="MarginContainer" parent="CharacterMenu"]
theme_override_constants/margin_top = 90

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterMenu/MarginContainer"]
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterMenu/MarginContainer/HBoxContainer"]
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="CharacterMenu/MarginContainer/HBoxContainer/VBoxContainer"]
texture = ExtResource("7_n0eyn")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterMenu/MarginContainer/HBoxContainer/VBoxContainer"]

[node name="Left" type="Button" parent="CharacterMenu/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "<"

[node name="Right" type="Button" parent="CharacterMenu/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = ">"

[node name="Username" type="LineEdit" parent="CharacterMenu/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 64)
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(0.72549, 0.733333, 0.741176, 1)
theme_override_font_sizes/font_size = 32
placeholder_text = "Name..."

[node name="GoButton" type="Button" parent="CharacterMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Go"

[node name="MainMenu" type="VBoxContainer" parent="." node_paths=PackedStringArray("title", "join_button", "create_button", "profile_button")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -98.5
offset_right = 122.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8
script = ExtResource("8_kofmm")
title = NodePath("Label")
join_button = NodePath("JoinButton")
create_button = NodePath("CreateButton")
profile_button = NodePath("ProfileButton")

[node name="Label" type="Label" parent="MainMenu"]
custom_minimum_size = Vector2(0, 350)
theme_override_colors/font_outline_color = Color(0.109804, 0.219608, 0.321569, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 90
text = "Fowl!"
horizontal_alignment = 1

[node name="JoinButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Join a game"

[node name="CreateButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Create a game"

[node name="ProfileButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 64)
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Change user"
